--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,3 +1,4 @@
+@import url(https://fonts.googleapis.com/css?family=Lobster:400&display=swap);
 @import url(https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap);
 
 
@@ -8,7 +9,7 @@ body {
   font-family: Rubik;
 }
 .display-1 {
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Lobster', display;
   font-size: 4.25rem;
   font-display: swap;
 }
@@ -16,7 +17,7 @@ body {
   font-size: 6.8rem;
 }
 .display-2 {
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Lobster', display;
   font-size: 2.5rem;
   font-display: swap;
 }
@@ -1089,6 +1090,9 @@ section.lazy-placeholder:after {
 }
 .cid-qxyOwk585I H3 {
   color: #ffffff;
+}
+.cid-qxyOwk585I H1 {
+  text-align: center;
 }
 .cid-rRTeRJ8qlo {
   padding-top: 0px;
